force-app/main/default/objects/MergeHistory__c/MergeHistory__c.object-meta.xml
<CustomObject>
    <label>マージ履歴</label>
    <nameField>
        <displayFormat>MH-{0000000000}</displayFormat>
        <label>マージ履歴名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>