force-app/main/default/objects/MergeHistory__c/fields/ApiErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ApiErrorCode__c</fullName>
    <label>APIエラーコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>