force-app/main/default/objects/MergeHistory__c/fields/ApiErrorCount__c.field-meta.xml
<CustomField>
    <fullName>ApiErrorCount__c</fullName>
    <label>APIエラーカウント</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>