force-app/main/default/objects/MergeHistory__c/fields/ApiErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ApiErrorMessage__c</fullName>
    <label>APIエラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>