force-app/main/default/objects/MergeHistory__c/fields/ApiHttpStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ApiHttpStatusCode__c</fullName>
    <label>APIのHTTPステータスコード</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>