force-app/main/default/objects/MergeHistory__c/fields/DstMarketoId__c.field-meta.xml
<CustomField>
    <fullName>DstMarketoId__c</fullName>
    <label>マージ先MarketoID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>