force-app/main/default/objects/MergeHistory__c/fields/DstSfId__c.field-meta.xml
<CustomField>
    <fullName>DstSfId__c</fullName>
    <label>マージ先SalesforceID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>