force-app/main/default/objects/MergeHistory__c/fields/IsMarketoMerged__c.field-meta.xml
<CustomField>
    <fullName>IsMarketoMerged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketoマージ済み</label>
    <type>Checkbox</type>
</CustomField>