force-app/main/default/objects/MergeHistory__c/fields/LastApiMergedDate__c.field-meta.xml
<CustomField>
    <fullName>LastApiMergedDate__c</fullName>
    <label>最終Marketo APIマージ日時</label>
    <type>DateTime</type>
</CustomField>