force-app/main/default/objects/MergeHistory__c/fields/LastProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>LastProcessedDate__c</fullName>
    <label>最終処理日時</label>
    <type>DateTime</type>
</CustomField>