force-app/main/default/objects/MergeHistory__c/fields/SrcMarketoIds__c.field-meta.xml
<CustomField>
    <fullName>SrcMarketoIds__c</fullName>
    <label>マージ元MarketoID(複数)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>