force-app/main/default/objects/MergeHistory__c/fields/SrcSfId__c.field-meta.xml
<CustomField>
    <fullName>SrcSfId__c</fullName>
    <label>マージ元SalesforceID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>