force-app/main/default/objects/MergeHistory__c/listViews/AllData.listView-meta.xml
<ListView>
    <fullName>AllData</fullName>
    <columns>NAME</columns>
    <columns>IsMarketoMerged__c</columns>
    <columns>SrcSfId__c</columns>
    <columns>DstSfId__c</columns>
    <columns>LastApiMergedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>全てのデータ</label>
</ListView>