force-app/main/default/objects/MergeHistory__c/listViews/TodaysData.listView-meta.xml
<ListView>
    <fullName>TodaysData</fullName>
    <columns>NAME</columns>
    <columns>IsMarketoMerged__c</columns>
    <columns>SrcSfId__c</columns>
    <columns>DstSfId__c</columns>
    <columns>LastApiMergedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>今日のデータ</label>
</ListView>